dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR(all_tape_level_1n2)

AM_INIT_AUTOMAKE(gvs_production, v3.21)
AM_CONFIG_HEADER(config.h)

dnl Default for GVS and friends.
AC_PREFIX_DEFAULT(/usr/local/trmm/GVBOX)

if test $prefix = NONE; then
  prefix=$ac_default_prefix
fi

AC_PATH_PROGS(perlbin,perl)
AC_PROG_INSTALL

AC_CONFIG_FILES([doc/Makefile Makefile])
AC_OUTPUT
