AUTOMAKE_OPTIONS = foreign

docdir = $(prefix)/doc/$(PACKAGE)
doc_DATA = AIW-II_instructions.txt \
           bl_bar.gif \
           gvs_production_logo.gif \
           gvs_production_bg.gif \
           monthly_2A-52.html \
           gvs_production_body.html \
           right_arrow_a.gif \
           gvs_production_content.html \
           gvs_production_index.html 

EXTRA_DIST = $(doc_DATA)
